--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.Fullscreen">
         <activity
+            android:name=".SubjectActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
